--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
