--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.18.1",
+    "@react-spring/parallax": "^9.6.1",
+    "@react-spring/web": "^9.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +18,6 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-cookie": "^4.1.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
