--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 REACT_APP_GOOGLE_MAPS_API_KEY="AIzaSyAV1b9XDeOA-qPN5w_IQXBa0ER8_HD4lWA"
 
 REACT_APP_SERVER_API_KEY="http://localhost:8080/"
+
+REACT_APP_WEATHER_API_KEY="bec53c467bf111d14ccda88c94437470"
