--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,16 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # next.js build output
 .next
+
+# production
+/build
+
+# misc
+.DS_Store
