--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "server",
+  "name": "travel-log",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bin/www",
-    "local": "./node_modules/.bin/nodemon -L --ignore public/",
-    "db:reset": "node bin/resetdb.js"
+    "local": "./node_modules/.bin/nodemon -L --ignore public/ --ignore client/",
+    "db:reset": "node bin/resetdb.js",
+    "setup-production": "npm run install-client && npm run build-client && npm install",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build"
   },
   "dependencies": {
     "chalk": "^2.4.2",
